# MY_Labs_OOP

./: .gitignore  CMakeLists.txt  Measurement.cpp  README.md  Sensor.cpp  Sensor.h  WeatherStation.cpp  WeatherStation.h
Lab_2/: EnvironmentalSensor.cpp  EnvironmentalSensor.h  HumiditySens.cpp  HumiditySens.h  Measurement.cpp  Measurement.h  PressureSens.cpp  PressureSens.h  Sensor.cpp  Sensor.h  TemperatureSens.cpp  TemperatureSens.h  WeatherStation.cpp  WeatherStation.h  main.cpp
Lab_4/: Bobby.cpp  Bobby.h  Human.cpp  Human.h  HumiditySens.cpp  HumiditySens.h  HumidityWorker.cpp  HumidityWorker.h  Measurement.cpp  PressureSens.cpp  PressureSens.h  PressureWorker.cpp  PressureWorker.h  Roles.cpp  Roles.h  Sensor.cpp  Sensor.h  TemperatureSens.cpp  TemperatureSens.h  TemperatureWorker.cpp  TemperatureWorker.h  main.cpp
Lab_6/: WeatherStation.cpp  WeatherStation.h  main.cpp
